# suisei

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  main.py  pyproject.toml
suisei/: __init__.py  bolt_listeners.py  conversation_store.py  env.py  llm_slack.py  llm_slack_executor.py  llm_utils.py  main.py  slack_format.py  slack_utils.py
suisei/slack_markdown/: chunker.py  extensions.py  renderer.py
suisei/tools/: github.py  google.py
tests/: test_chunker.py  test_md_slack.py  test_renderer.py
