[project]
name = "suichan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.55.12",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "slack-bolt>=1.22.0",
    "slack-sdk>=3.34.0",
]
