[project]
name = "suichan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "google-genai>=0.3.0",
    "litellm>=1.55.12",
    "numpydoc>=1.8.0",
    "pillow>=11.0.0",
    "pygithub>=2.5.0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "slack-bolt>=1.22.0",
    "slack-sdk>=3.34.0",
]
